test/vm/errors/compiler/duplicate_export.ach
// Compiler error: exporting the same name twice
// Expected: error "exported more than once"

import "../../../modules/duplicate_export.ach" as dup
